[gd_scene load_steps=4 format=3 uid="uid://bjoxoq6n622fi"]

[ext_resource type="Script" uid="uid://dxmmx3tuikpwf" path="res://scenes/mod_creator_ui/patch_window.gd" id="1_2axvh"]
[ext_resource type="PackedScene" uid="uid://1qcd4cpce1o8" path="res://scenes/config_ui/file_picker.tscn" id="1_nvfg0"]
[ext_resource type="Theme" uid="uid://bxng31jcwi6bd" path="res://resources/main_theme.tres" id="2_qrx46"]

[node name="PatchWindow" type="Window"]
oversampling_override = 1.0
title = "Create IPS Patch"
initial_position = 2
size = Vector2i(350, 230)
transient = true
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("1_2axvh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="OriginalFilePicker" parent="VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_nvfg0")]
unique_name_in_owner = true
layout_mode = 2
target_name = "Original File"

[node name="ModifiedFilePicker" parent="VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_nvfg0")]
unique_name_in_owner = true
layout_mode = 2
target_name = "Modified File"

[node name="FooterPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_qrx46")
theme_type_variation = &"Footer"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/FooterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 2

[node name="CreatePatchButton" type="Button" parent="VBoxContainer/FooterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Create and Add Patch"
